# PdStarterKit

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
scripts/: utilities.cmake
source/projects/dummy_tilde/: CMakeLists.txt  dummy_tilde.c
source/projects/pa.starter/: CMakeLists.txt  pa.starter.c
source/projects/pa.starter_tilde/: CMakeLists.txt  pa.starter_tilde.c
source/projects/pa.starterpp_tilde/: CMakeLists.txt  pa.starterpp_tilde.cpp
src/: dummy_tilde.c
